@@ -10,51 +10,46 @@
         android:layout_height="wrap_content" />
 
 
-    <Button
-        android:id="@+id/first"
+    <LinearLayout
+        android:id="@+id/playerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="First"
-        />
+        android:orientation="horizontal"
 
-    <Button
-        android:id="@+id/second"
+        >
+        <TextView
+            android:id="@+id/resultName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#000000"
+            android:gravity="start"
+            android:textSize="25sp"
+            />
+        <TextView
+            android:id="@+id/resultLvl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#000000"
+            android:gravity="end"
+            android:textSize="25sp"
+            />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="Second"
-
+        android:orientation="vertical"
+        android:id="@+id/dataView"
+        android:visibility="gone"
         />
 
-    <Button
-        android:id="@+id/third"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="Third"
 
-        />
 
-    <TextView
-        android:id="@+id/resultName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        />
 
-    <TextView
-        android:id="@+id/resultView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        />
 
-    <TextView
-        android:id="@+id/resultLvl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        />
+
+
+
 </LinearLayout>
 
